Update parent pom