@@ -5,7 +5,7 @@
   <parent>
     <artifactId>java11-oss</artifactId>
     <groupId>org.avaje</groupId>
-    <version>2.1.2</version>
+    <version>2.1.3</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
@@ -13,6 +13,11 @@
   <groupId>io.avaje</groupId>
   <artifactId>avaje-http-client</artifactId>
   <version>0.1-SNAPSHOT</version>
+
+  <scm>
+    <developerConnection>scm:git:git@github.com:avaje/avaje-http-client.git</developerConnection>
+    <tag>HEAD</tag>
+  </scm>
 
   <dependencies>
 
@@ -106,28 +111,4 @@
 
   </dependencies>
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.22.2</version>
-        <configuration>
-          <argLine>
-            --illegal-access=permit
-          </argLine>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-failsafe-plugin</artifactId>
-        <version>2.22.2</version>
-        <configuration>
-          <argLine>
-            --illegal-access=permit
-          </argLine>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
 </project>
